refactor: adapt interpreter and runtime to new type system
Interpreter 实现 ExecutionContext 接口，所有内部组件适配
NovaValue 接口化、NovaCallable/NovaAnnotationProcessor 迁移、
nova-runtime-types 模块引入等变更。包括 HirEvaluator、
MirInterpreter、MemberResolver、stdlib、reflect 等全面适配。